--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 - 3.3
 - 3.5
 install:
-- pip install coveralls
+- pip install coveralls pyside
 script:
 - python run_tests.py
 - pip install git+git://github.com/pyblish/pyblish-lite.git
