--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ language: python
 sudo: required
 dist: trusty
 
-virtualenv:
-  system_site_packages: true
-
 python:
 - 2.6
 - 2.7
@@ -22,3 +19,5 @@ script:
 
 after_success:
 - coveralls
+
+sudo: true
