--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
 language: python
-sudo: required
-dist: trusty
-
 python:
-- 2.6
-- 2.7
-
+  - 3.4
+addons:
+  apt:
+    packages:
+    - qt4-qmake
+    - libqt4-dev
 install:
-- sudo apt-get update
-- sudo apt-get -y install python-pyside
-- pip install coveralls
+  - pip install --upgrade pip
+  - pip install PySide --no-index --find-links https://parkin.github.io/python-wheelhouse/;
+  - python ~/virtualenv/python${TRAVIS_PYTHON_VERSION}/bin/pyside_postinstall.py -install
 
+# command to run tests
 script:
 - python run_tests.py
 - pip install git+git://github.com/pyblish/pyblish-lite.git
