--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,23 @@
 language: python
+
 python:
   - 3.4
+
 addons:
   apt:
     packages:
     - qt4-qmake
     - libqt4-dev
+
 install:
+  # Based on http://stackoverflow.com/a/24545890/478949
   - pip install --upgrade pip
   - pip install PySide --no-index --find-links https://parkin.github.io/python-wheelhouse/;
   - python ~/virtualenv/python${TRAVIS_PYTHON_VERSION}/bin/pyside_postinstall.py -install
 
-# command to run tests
 script:
-- python run_tests.py
-- pip install git+git://github.com/pyblish/pyblish-lite.git
+  - pip install git+git://github.com/pyblish/pyblish-base.git
+  - python run_tests.py
 
 after_success:
-- coveralls
+  - coveralls
